# Nepal_Guide_Hub

./: .env  .gitignore  README.md  manage.py  package-lock.json  pyproject.toml  requirements.txt
admin_dashboard/: urls.py  views.py
apps/accounts/: adapters.py  admin.py  forms.py  models.py  oauth_views.py  urls.py  views.py
apps/agencies/: apps.py  urls.py  views.py
apps/bookings/: admin.py  esewa_helper.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  forms.py  models.py  urls.py  views.py
apps/guides/: admin.py  forms.py  models.py  urls.py  views.py
nepal_guide_hub/: asgi.py  settings.py  urls.py  wsgi.py
templates/: agency_base.html  base.html
templates/accounts/: agency_profile.html  login.html  register.html  tourist_profile.html
templates/admin_dashboard/: approve_verification.html  dashboard.html  login.html  reject_verification.html  verification_requests.html
templates/agencies/: add_guide.html  add_package.html  agency_dashboard.html  agency_detail.html  agency_list.html  analytics.html  bookings.html  edit_guide.html  edit_package.html  manage_guides.html  manage_packages.html
templates/bookings/: book_guide.html  book_package.html  booking_detail.html  process_payment.html
templates/core/: agency_detail.html  contact.html  guide_detail.html  home.html  landing.html  package_detail.html  search.html
templates/guides/: guide_list.html
templates/tourist/: agencies.html  agency_detail.html  base.html  bookings.html  guide_detail.html  guide_detail_backup.html  guides.html  home.html  package_detail.html  packages.html  (+2 more)
(+12 files in other folders)
