[tool.poetry]
name = "nepal-guide-hub"
version = "0.1.0"
description = ""
authors = ["muk3shh07 <dhamimukesh076@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
