[tool.poetry]
name = "nepal-guide-hub"
version = "0.1.0"
description = ""
authors = ["muk3shh07 <dhamimukesh076@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
python-decouple = "^3.8"
django-crispy-forms = "^2.4"
crispy-tailwind = "^1.0.3"
psycopg = {extras = ["binary"], version = "^3.2.12"}
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
